plugins {
    id 'java'
}

sourceCompatibility = 14

group 'me.shadowchild.candor'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation files('libs/CandorManager-snapshot.jar')
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

jar {

    manifest {

        attributes 'Candor-Module-Class': 'me.shadowchild.candor.sims4.Sims4Module'
    }
}
